--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,1 +1,61 @@
 /* В этом файле будут храниться все значения переменных в исходном состоянии, а так же их изменения в зависимости от ширины устройства */
+:root {
+    --background-image: repeating-linear-gradient(to right, #d3d3d3, #d3d3d3 2px, rgb(211 211 211 / 0) 2px, rgb(211 211 211 / 0) 4px),
+    repeating-linear-gradient(#d3d3d3, #d3d3d3 2px, rgb(211 211 211 / 0) 2px, rgb(211 211 211 / 0) 4px),
+    linear-gradient(#e7e7e7 0.01%, #1a1a1a 100%);
+    
+    --main-text-font: 'Inter'; /*Основной шрифт страницы, фолбэк - шрифт без засечек*/
+    --main-text-font-size: 1.125rem; /*18px*/
+    --main-text-weight-header: 700; /*Вес шрифта в заголовке страницы и заголовках карточек*/
+    --main-text-weight: 400; /*Вес шрифта для основного текста карточек и PressStart2P*/
+    --accent-text-font: 'PressStart2P'; 
+    --accent-text-font-size: 0.875rem; /*14px*/
+    --accent-text-header: clamp(3.0625rem, 2.4847rem + 2.4653vw, 4.0625rem); /*От 49px до 65px*/
+    --accent-text-subheader: clamp(0.875rem, 0.55rem + 1.3867vw, 1.4375rem); /*От 14px до 23px*/
+
+    --main-width: clamp(23.4375rem, 11.8451rem + 49.4607vw, 43.75rem); /*При достижении этого размера ширина карточек перестанет увеличиваться, а будут только отступы по бокам. Сделать отступы центрированием контента*/
+    --header-start-footer-end-padding: 6.25rem; /*100px*/
+    --header-width: clamp(23.4375rem, 11.7007rem + 50.077vw, 43.75rem); /*От 375px до 700px*/
+    --header-height: clamp(20.4375rem, 18.9569rem + 6.3174vw, 23rem); /*От 327px до 368px*/
+    --header-subheader-gap: 1.25rem; /*20px*/
+    --card-between-gap: 3.125rem; /*50px*/
+    --card-header-inline-paddng: 0.625rem; /*10px*/
+    --card-header-block-padding: 0.25rem; /*4px*/
+    --card-content-padding: 1.5625rem; /*25px*/
+    --card-content-gap: 1.625rem; /*26px*/
+    --card-content-text-gap: 1.6875rem; /*27px*/
+    --card-content-button-gap: 0.625rem; /*10px*/
+    --border-width: 0.125rem; /*2px*/
+    --button-heght: 2.375rem; /*38px*/
+    --text-shadow-width: 0.0625rem; /*1px*/
+    --watermark-block-start-padding: 1.4375rem; /*23px из-за границы*/
+    --watermark-inline-end-padding: clamp(0.6875rem, 0.2541rem + 1.849vw, 1.4375rem); /*От 11px до 23px из-за границы*/
+    --footer-inline-size: clamp(19.375rem, 18.3277rem + 4.4684vw, 21.1875rem); /*От 310px до 339px*/
+    --footer-block-start-padding: 3.125rem; /*50px*/
+
+    --main-text-color: #000000;
+    --background-page-color: #FFFFFF;
+    --border-color: #000000;
+    --text-shadow-color: #FFFFFF;
+    --background: linear-gradient(180deg, #E7E7E7 0%, #1A1A1A 100%);
+    --heart-icon-contour-color: #000000;
+    --heart-icon-main-body: red;
+    --heart-icon-core: #FFFFFF;
+
+
+    --watermark-opacity: 0.5; /*Прозрачность текста в правом верхнем углу картинки*/
+
+    --dialog-inline-size: 22.0625rem; /*353px*/
+    --dialog-block-padding: 1.875rem;
+    --dialog-inline-padding: 1.875rem;
+    --dialog-row-gap: 1.875rem;
+    --dialog-column-gap: 1.25rem;
+
+}
+
+@media (width <= 375px) {
+    :root {
+        --dialog-inline-size: 21.3125rem;
+        --dialog-inline-padding: 2.5rem;
+    }
+  }
