--- a/styles/style.css
+++ b/styles/style.css
@@ -13,7 +13,7 @@
 .page {
   min-inline-size: 320px;
   min-block-size: 100dvb;
-  font-family: var(--main-text-font, sans-serif);
+  font-family: var(--main-text-font, 'Inter'), sans-serif;
   font-size: var(--main-text-font-size, 1.125rem);
   font-variation-settings: 'wght' var(--main-text-weight, 400);
   background-image: var(--background-image);
@@ -27,12 +27,12 @@
   display: flex;
   flex-direction: column;
   inline-size: var(--header-width);
-  min-block-size: var(--header-height);
   justify-content: center;
   align-items: center;
   gap: var(--header-subheader-gap, 1.25rem);
   margin: var(--header-start-footer-end-padding, 6.25rem) auto;
-  font-family: var(--accent-text-font, 'PressStart2P');
+  padding: var(--header-block-padding) 0;
+  font-family: var(--accent-text-font, 'PressStart2P'), fantasy;
   border: solid var(--border-width, 0.125rem) var(--border-color, #000000);
   background-color: var(--background-page-color, #FFFFFF);
 }
@@ -56,7 +56,7 @@
   flex-direction: column;
   gap: var(--card-between-gap, 3.125rem);
   inline-size: var(--main-width);
-  margin: 0 auto;
+  margin: 0 auto var(--header-start-main-end-padding, 6.25rem);
 }
 
 .card {
@@ -92,7 +92,7 @@
   z-index: 1;
   top: var(--watermark-block-start-padding, 1.4375rem);
   right: var(--watermark-inline-end-padding);
-  font-family: var(--accent-text-font, 'PressStart2P');
+  font-family: var(--accent-text-font, 'PressStart2P'), fantasy;
   font-size: var(--accent-text-font-size, 0.875rem);
   mix-blend-mode: hard-light;
   text-shadow: var(--text-shadow-width, 0.0625rem) 0 var(--text-shadow-color, #FFFFFF),
@@ -133,7 +133,7 @@
 }
 
 .button {
-  font-family: var(--accent-text-font, 'PressStart2P');
+  font-family: var(--accent-text-font, 'PressStart2P'), fantasy;
   font-size: var(--accent-text-font-size, 0.875rem);
   line-height: 0.9;
   background-color: var(--background-page-color, #FFFFFF);
@@ -153,7 +153,7 @@
   border-width: var(--border-width, 0.125rem);
   border-color: transparent;
   padding: 0;
-  
+  transition: border-color 0.3s ease;
 }
 
 .like-icon {
@@ -196,11 +196,9 @@
 
 .card__icon-button:focus-visible {
   border-color: var(--border-color, #000000);
-  transition: border-color 0.3s ease;
 }
 
 .text-button:hover::before {
-  content: '';
   transform: scaleX(1);
 }
 
@@ -241,19 +239,19 @@
 /*Работаем над основным контентом. Конец*/
 
 
-/*Стилизуем подвал и модальное окошко. Начало*/
-.footer .button {
+/*Стилизуем кнопку вызова модального окошка и само окно. Начало*/
+.main > .button {
   display: flex;
-  inline-size: var(--footer-inline-size);
+  inline-size: var(--save-button-inline-size);
   gap: 0.5rem;
   justify-content: center;
   align-items: center;
-  margin: var(--footer-block-start-padding, 3.125rem) auto var(--header-start-footer-end-padding, 6.25rem);
+  margin: 0 auto;
   block-size: 3.4375rem;
   color: var(--text-shadow-color, #FFFFFF);
 }
 
-.footer__button-icon {
+.main__save-button-icon {
   inline-size: 1.3125rem;
   mix-blend-mode: difference;
 }
@@ -276,7 +274,7 @@
 }
 
 .dialog__text {
-  font-family: var(--accent-text-font, 'PressStart2P');
+  font-family: var(--accent-text-font, 'PressStart2P'), fantasy;
   font-size: var(--accent-text-font-size, 0.875rem);
   text-transform: uppercase;
   line-height: 1.5;
@@ -296,7 +294,7 @@
   background-color: rgb(0 0 0 / 0.75);
 }
 
-/*Стилизуем подвал и модальное окошко. Конец*/
+/*Стилизуем кнопку вызова модального окошка и само окно. Конец*/
 
 @media (width <= 375px) {
   .header-for-mobile,
@@ -304,12 +302,12 @@
     inline-size: 100%;
   }
 
-  .footer .button {
+  .main > .button {
     flex-direction: column;
     min-block-size: 5.25rem;
   }
 
-  .footer__button-icon {
+  .main__save-button-icon {
     inline-size: 1.75rem;
   }
 }
